bk_ida/gccida/g1/force_not_mem
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_not_mem/src/explow.c:1244:21: error: use of undeclared identifier 'machine_mode'
v3 = gen_reg_rtx( ( machine_mode)v2); 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/force_not_mem/src/obj/explow.o] Error 1
